# jacques

./: .gitignore  CLAUDE.md  LICENSE  flake.nix  pyproject.toml
.serena/: project.yml
docs/: architecture.md  pipeline.md
docs/features/: 01-disc-detection.md  02-ripping.md  03-transcoding.md  04-metadata.md  05-web-ui.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/components/: CandidateSelector.svelte  CandidateSelector.test.js  DuplicateActions.svelte  (+7 more)
jacques/: __init__.py  __main__.py  config.py  daemon.py  database.py
jacques/api/: app.py
jacques/models/: __init__.py  job.py  ripped_disc.py
jacques/services/: broadcaster.py  detector.py  discdb.py  dischash.py  metadata.py  organizer.py  ripper.py  transcoder.py
jacques/templates/: base.html  index.html
packaging/: config.example.toml
packaging/debian/: changelog  control  copyright  install  jacques.sysusers  rules
packaging/flatpak/: generate-sources.sh  org.thefirstofthe300.Jacques.yaml  requirements.txt
packaging/rpm/: jacques.conf  jacques.spec
packaging/systemd/: jacques.service
scripts/: HandBrakeCLI  makemkvcon
tests/: conftest.py  test_app.py  test_broadcaster.py  test_config.py  test_daemon.py  test_database.py  test_dedup.py  test_detector.py  test_discdb.py  test_dischash.py  test_job_model.py  test_jobs_api.py  test_jobs_stream.py  test_metadata.py  test_organizer.py  test_pipeline.py  test_rerun.py  test_ripped_disc_model.py  test_ripper.py  test_static_cache.py  test_transcoder.py
(+13 files in other folders)
