[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jacques"
version = "0.1.0"
description = "Automatic disc ripping daemon with web UI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.3",
    "pyudev>=0.24",
    "httpx>=0.27",
    "rich>=13",
    "wordsegment>=1.3",
]

[project.scripts]
jacques = "jacques.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jacques*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
